syntax = "proto3";

option csharp_namespace = "OpenAIGRPC";

message MessageRequest
{
  string message = 1;
}

message MessageResponse
{
  string message = 1;
}

service ResponseService
{
  rpc GenerateResponse (MessageRequest) returns (MessageResponse);
}